11559: fix top alignment after scrolling

--- a/app/assets/stylesheets/admin/questions/_questions_outline.scss
+++ b/app/assets/stylesheets/admin/questions/_questions_outline.scss
@@ -6,7 +6,7 @@
 .outline {
   background-color: $white;
   border-radius: 4px;
-  margin-top: 7px !important;
+  margin-top: 7px;
   padding: 10px;
 
   ul {
